Update README.md
install instructions for 6.0.0 elastic and Rstudio Server with R 3.4.2 on Ubuntu 16.04.03